--- a/package.json
+++ b/package.json
@@ -39,13 +39,28 @@
     "url": "https://github.com/xan105/node-cgo-screenshot/issues"
   },
   "homepage": "https://github.com/xan105/node-cgo-screenshot#readme",
+  "funding": [
+    {
+      "type": "github",
+      "url": "https://github.com/sponsors/xan105"
+    },
+    {
+      "type": "paypal",
+      "url": "https://www.paypal.me/xan105"
+    },
+    {
+      "type": "patreon",
+      "url": "https://www.patreon.com/xan105"
+    }
+  ],
   "devDependencies": {
     "eslint": "^8.11.0"
   },
   "dependencies": {
-    "@xan105/error": "^1.2.0",
-    "@xan105/fs": "^2.0.4",
-    "@xan105/is": "^2.4.0",
-    "ffi-napi": "^4.0.3"
+    "@xan105/error": "^1.4.3",
+    "@xan105/ffi": "^0.1.0",
+    "@xan105/fs": "^2.1.0",
+    "@xan105/is": "^2.8.0",
+    "koffi": "^2.3.4"
   }
 }
